# MorgoUtil

./: .gitignore  CMakeLists.txt
MorgoUtil/: Log.hpp  SparseSet.hpp
